--- a/exoplanet_preprocessing.ipynb
+++ b/exoplanet_preprocessing.ipynb
@@ -3924,7 +3924,7 @@
    "execution_count": 148,
    "id": "f064fed8",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -4652,7 +4652,7 @@
    "execution_count": 80,
    "id": "4a8653f0",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -5393,7 +5393,9 @@
    "cell_type": "code",
    "execution_count": 142,
    "id": "e3f6181e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -6855,7 +6857,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
